Messed with PID values and finished making on the fly paths

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -20,7 +20,7 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 59.53,
+  "robotMass": 63.4802522,
   "robotMOI": 8.037,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.048,
