--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -48,10 +48,10 @@ SwerveDriveConstants {
 
   pathplanning {
       driveBaseRadiusInMeters = 0.44
-      totalErrorThreshold = 0.5
+      totalErrorThreshold = 0.
       errorSpikeThreshold = 0.25
       translationConstants {
-        p = 2.5
+        p = 3.75
         i = 0.0
         d = 0.0
       }
