--- a/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
@@ -14,9 +14,9 @@ winchMotor{
 }
 
 servoMotor{
-  port = 0 #placeholder for the actual port number 
+  port = 8 
 }
 
-climbSpeed = 0.0
+climbSpeed = 0.25
 reverseClimbSpeed = 0.0
-servoMotorAngle = 0.0
+servoMotorAngle = 45.0
