--- a/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdarm.conf
@@ -42,8 +42,8 @@ minAngleDeg = -50
 
 
 maxAngleDeg = 110
-minAngleDeg = -50 ##fix this
-climberPosition = -83 ##9 1/2 degrees was measured by CAD
+minAngleDeg = -86
+climberPosition = -85 ##9 1/2 degrees was measured by CAD
 safetyAngle = -61 ##robot should not go below this angle if end effector is not in proper position
 coralLoad = -40
 level_1 = -25 
@@ -60,5 +60,5 @@ kD = 0.0
 kG = 0.02
 kVoltage = 0.0
 voltageReference = 12.5
-tolerance = 2.5 ##Placeholder
+tolerance = 1.5 ##Placeholder
  
