climb and getting into climber mode works

--- a/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sbsdclimber.conf
@@ -17,7 +17,7 @@ servoMotor{
   port = 8 
 }
 
-climbSpeed = 0.25
-reverseClimbSpeed = 0.0
-servoMotorAngle = 45.0
+climbSpeed = 0.5
+reverseClimbSpeed = -0.25
+unlatchedServoMotorAngle = 0.0
 servoMotorInitialAngle = 90.0
