put subsystems back

--- a/src/main/deploy/robotConfigs/SBSD/robot.conf
+++ b/src/main/deploy/robotConfigs/SBSD/robot.conf
@@ -1,8 +1,8 @@
 subsystems{
-  #swervedrivetrain{}
+  swervedrivetrain{}
   sbsdarm{}
   sbsdcoralendeffector{}
-  #sbsdcoralintakeeject{}
+  sbsdcoralintakeeject{}
   WS2812LEDs {}
   sbsdclimber{}
 }
