reset algae manipulator angle to zero using limit switch - not done needs testing

--- a/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
+++ b/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
@@ -25,6 +25,7 @@ pickupMotor{
   hasReverseLimitSwitch=false
 }
 
+resetAngleSwitchPort = 7
 intakeWheelSpeed = 0.2
 ejectWheelSpeed = 0.2
 deploySpeed = 0.2
