getting encoder tick readings from algae manip

--- a/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
+++ b/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
@@ -1,6 +1,6 @@
 ports{
-  intakeWheels = 16
-  pickupMotor = 17
+  intakeWheels = 17
+  pickupMotor = 16
 }
 
 intakeWheels{
@@ -8,7 +8,7 @@ intakeWheels{
   inverted=false
   hasEncoder=true
   encoderInverted=false
-  currentLimit=60
+  currentLimit=10
   brakeMode=true
   hasForwardLimitSwitch=false
   hasReverseLimitSwitch=false
@@ -18,18 +18,17 @@ pickupMotor{
   hasAbsoluteEncoder=false
   inverted=false
   hasEncoder=true
-  encoderInverted=false
-  currentLimit=60
+  encoderInverted=true
+  currentLimit=10
   brakeMode=true
   hasForwardLimitSwitch=false
   hasReverseLimitSwitch=false
 }
 
-resetAngleSwitchPort = 7
-intakeWheelSpeed = 0.2
-ejectWheelSpeed = 0.2
-deploySpeed = 0.2
-retractSpeed = 0.2
+intakeWheelSpeed = 0.0
+ejectWheelSpeed = 0.0
+deploySpeed = 0.0
+retractSpeed = 0.0
 deployAngle = 0.0
 retractAngle = 90.0 ##untested
 kP = 0.0
