--- a/src/main/deploy/robotConfigs/SBSD/sensors.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sensors.conf
@@ -7,6 +7,10 @@ sensors {
         port = 8
         reversedPolarity=true
     }
+    algaeManipMaxAngleLimitSwitchPort{
+      port = 7
+      reversedPolarity = true
+    }
 }
 
 pigeon {
