robot can move to left or right post - backwards still untested

--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -17,12 +17,12 @@ photonvision {
   cameraName3 = OV2311-2MP-60FPS-2
   cameraName4 = OV2311-2MP-60FPS-10
   OV2311-2MP-60FPS-7 {
-    cameraOffsetToCenterInInches = 11.69
+    cameraOffsetToCenterInInches = 11.25
     cameraOffsetToCenterInInchesY = 12.886
     cameraHeightInInches = 8.993
     cameraRollInDegrees = 0
     cameraPitchInDegrees = 20
-    cameraYawInDegrees = -25 #335
+    cameraYawInDegrees = 0 # was -25
     offsetToSwerveModInches = 5
   }
   OV2311-2MP-60FPS-3 {
@@ -44,12 +44,12 @@ photonvision {
     offsetToSwerveModInches = 5
   }
   OV2311-2MP-60FPS-10 {
-    cameraOffsetToCenterInInches = -11.69
+    cameraOffsetToCenterInInches = -11.25
     cameraOffsetToCenterInInchesY = -12.886
     cameraHeightInInches = 8.993
     cameraRollInDegrees = 0
     cameraPitchInDegrees = 20
-    cameraYawInDegrees = 155
+    cameraYawInDegrees = 180
     offsetToSwerveModInches = 5
   }
   
