algae manip implementation done - needs testing

--- a/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
+++ b/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
@@ -29,8 +29,14 @@ intakeWheelSpeed = 0.0
 ejectWheelSpeed = 0.0
 deploySpeed = 0.0
 retractSpeed = 0.0
-deployAngle = 0.0
-retractAngle = 90.0 ##untested
+initiaizeSpeed = 0.0001
+tolerance = 2
+intakeAngle= 0.0
+stowAngle = 0.0 
+holdAngle = 0.0
+scoreAngle = 0.0
+
+
 kP = 0.0
 kI = 0.0
 kD = 0.0
