--- a/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
+++ b/src/main/deploy/robotConfigs/SBSD/algaemanipulator.conf
@@ -8,7 +8,7 @@ intakeWheels{
   inverted=false
   hasEncoder=true
   encoderInverted=false
-  currentLimit=10
+  currentLimit=20
   brakeMode=true
   hasForwardLimitSwitch=false
   hasReverseLimitSwitch=false
@@ -19,24 +19,23 @@ pickupMotor{
   inverted=false
   hasEncoder=true
   encoderInverted=true
-  currentLimit=10
+  currentLimit=20
   brakeMode=true
   hasForwardLimitSwitch=false
   hasReverseLimitSwitch=false
 }
 
-intakeWheelSpeed = 0.0
-ejectWheelSpeed = 0.0
-deploySpeed = 0.0
-retractSpeed = 0.0
-initiaizeSpeed = 0.0001
+intakeWheelSpeed = 0.2
+ejectWheelSpeed = 0.2
+initiaizeSpeed = 0.05
+angleMaxSpeed = 1.0
 tolerance = 2
-intakeAngle= 0.0
+intakeAngle= -15.6
 stowAngle = 0.0 
-holdAngle = 0.0
-scoreAngle = 0.0
+holdAngle = -11.0
+scoreAngle = -11.0
 
 
-kP = 0.0
+kP = 0.4
 kI = 0.0
 kD = 0.0
