changed some settings

--- a/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
+++ b/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
@@ -45,7 +45,7 @@ level_1 = 123
 level_2 = 103
 level_3 = 73
 level_4 = -100
-angleOffset = 0.235423
+angleOffset = 0.532645 #0.235423
 maxSpeed = 0.4
 maxSpeedCloseToMax = 0.4
 closeToMaxAngleDeg = 115
