Added a new auto that scores once on level one

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -8,8 +8,9 @@
     "Auto #3 Paths 2025",
     "Auto #5 Paths 2025",
     "Auto #6 Paths 2025",
-    "TeleOp Paths",
-    "Practice Paths"
+    "Auto #7 Paths 2025",
+    "Practice Paths",
+    "TeleOp Paths"
   ],
   "autoFolders": [
     "2025 Autos",
