--- a/src/main/deploy/robotConfigs/SBSD/sensors.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sensors.conf
@@ -7,9 +7,21 @@ sensors {
         port = 8
         reversedPolarity=true
     }
+    endEffectorAdditionalIntakeSensor{
+        port = 6
+        reversedPolarity=true
+    }
     algaeManipMaxAngleLimitSwitchPort{
       port = 7
       reversedPolarity = true
+    }
+    cameras {
+        camera0 {
+            port = 0
+            width = 320
+            height = 240
+            fps = 8
+        }
     }
 }
 
