adjusted ee angle offset

--- a/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
+++ b/src/main/deploy/robotConfigs/SBSD/coralendeffector.conf
@@ -45,7 +45,7 @@ level_1 = 117
 level_2 = 91
 level_3 = 61
 level_4 = -112
-angleOffset = 0.453756189 ##0.461534
+angleOffset = 0.57 #0.5788 #when the value is dropped the degree value goes down (ee goes up)
 maxSpeed = 0.4
 maxSpeedCloseToMax = 0.4
 closeToMaxAngleDeg = 115
