using welded field

--- a/src/main/deploy/robotConfigs/SBSD/sensors.conf
+++ b/src/main/deploy/robotConfigs/SBSD/sensors.conf
@@ -23,7 +23,7 @@ pigeon {
 
 photonvision {
   useVisionForPose = true
-  useAndyMarkField = true
+  useAndyMarkField = false
   numberOfCameras = 4
   targetHeightInInches = 20.5
   targetCameraName = OV2311-2MP-60FPS-1
