--- a/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/sensors.conf
@@ -8,7 +8,7 @@ pigeon {
 
 photonvision {
   useVisionForPose = true
-  useAndyMarkField = true
+  useAndyMarkField = false
   numberOfCameras = 4
   targetHeightInInches = 12.13
   targetCameraName = OV2311-2MP-60FPS-7
