removed commented code

--- a/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
+++ b/src/main/deploy/robotConfigs/SwerveBot/swervedrivetrain.conf
@@ -195,11 +195,11 @@ Mod3 {
 }
 parkingbrake{}
 teleop {
-    slowmodefowardbackscale = 0.45
+    slowmodeforwardbackscale = 0.45
     slowmoderotatescale = 0.45
-    midmodefowardbackscale = 0.70
+    midmodeforwardbackscale = 0.70
     midmoderotatescale = 0.50
-    fastmodefowardbackscale = 1
+    fastmodeforwardbackscale = 1
     fastmoderotatescale = 1
     kdelay=25
     kproportion=0.025
